k8s/miaosha/srv_db_master.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-master
  labels:
   name: mysql-master
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    role: mysql-master
