k8s/miaosha/srv_db_slave.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-slave-service
  labels:
   name: mysql-slave
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    role: mysql-slave
